--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Eindopdracht
 spring.sql.init.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/maatjesmatchdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/matchmaatjedb
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
